[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "space-events-api"
version = "0.1.0"
description = "A FastAPI-based project for managing space-related events"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
pythonpath = ["."]